# oura-ring-mcp-server

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  uv.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: test.yml
src/: __init__.py  constants.py  server.py
src/mcp/: __init__.py  constants.py  mcp.py
src/model_context_protocol/: server.py
src/oura_ring/: __init__.py  constants.py  routes.py  utils.py
src/oura_ring_data/: constants.py
tests/: test_routes.py  test_utils.py
tests/mcp/: test_mcp.py
tests/oura_ring/: test_routes.py  test_utils.py
