[project]
name = "oura-ring-mcp"
version = "0.1.0"
description = "A MCP server for the Oura Ring API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nathan Thomas" }]
keywords = ["git", "mcp", "llm", "automation", "oura", "ring"]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.116.1",
    "mcp[cli]>=1.13.1",
    "uvicorn>=0.35.0",
]

[project.urls]
Repository = "https://github.com/nwthomas/oura-ring-mcp-server"
Issues = "https://github.com/nwthomas/oura-ring-mcp-server/issues"