[project]
name = "oura-ring-mcp"
version = "0.1.0"
description = "A MCP server for the Oura Ring API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nathan Thomas" }]
keywords = ["git", "mcp", "llm", "automation", "oura", "ring"]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "pydantic>=1.10.2",
    "anyio>=3.6.1",
]

[project.urls]
Repository = "https://github.com/nwthomas/oura-ring-mcp-server"
Issues = "https://github.com/nwthomas/oura-ring-mcp-server/issues"
