[project]
name = "oura-ring-mcp"
version = "0.1.0"
description = "A MCP server for the Oura Ring API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nathan Thomas" }]
keywords = ["git", "mcp", "llm", "automation", "oura", "ring"]
license = { text = "MIT" }
dependencies = [
    "httpx==0.28.1",
    "mcp[cli]==1.13.1",
    "pydantic==2.11.7",
    "anyio==4.10.0",
    "pytest-asyncio==1.1.0",
    "pytest-mock==3.15.0",
]

[project.urls]
Repository = "https://github.com/nwthomas/oura-ring-mcp-server"
Issues = "https://github.com/nwthomas/oura-ring-mcp-server/issues"

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
